--- a/index.html
+++ b/index.html
@@ -2,17 +2,28 @@
 <head>
   <title>Home</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" hrf="css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <h1 class="title">My first website</h1>
   <div class="container">
+    <div class="imgage">
+        <img src="img/me.jpg" alt="selfie" />
+    </div>
     <div class="box">
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quas eum
-        molestias quos nulla qui quaerat vero illo cumque a impedit recusandae
-        voluptate asperiores, inventore quia voluptatum nam eos laudantium.
-      </p>
+        <p>
+            I'm Sebastian. And this is my test website.
+        </p>
+    </div>
+    <div class="box">
+        <p>
+            I can write so much here and it will instantly appear on the website.
+        </p>
+    </div>
+    <div class="box">
+        <p>
+            The customizability is limitless.
+        </p>
     </div>
   </div>
 </body>
