--- a/index.html
+++ b/index.html
@@ -5,25 +5,35 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1 class="title">My first website</h1>
+  <h1 class="title">About Me</h1>
   <div class="container">
     <div class="imgage">
         <img src="img/me.jpg" alt="selfie" />
     </div>
-    <div class="box">
-        <p>
-            I'm Sebastian. And this is my test website.
-        </p>
-    </div>
-    <div class="box">
-        <p>
-            I can write so much here and it will instantly appear on the website.
-        </p>
-    </div>
-    <div class="box">
-        <p>
-            The customizability is limitless.
-        </p>
+    <div class="infobox">
+        <div class="box">
+            <h1>
+                I'm Sebastian. Welcome to my about me.
+            </h1>
+        </div>
+        <div class="box">
+            <p>
+                <b>name</b><br>
+                Sebastian Kuipers<br>
+                <b>age</b><br>
+                21<br>
+                <b>Origin</b><br>
+                Dutch<br>
+                <b>Residence</b><br>
+                Cruquius<br>
+            </p>
+        </div>
+        <div class="box">
+            <p>
+                I'm Sebastian Kuipers, born and raised in Haarlem. I've been very interested in computers and technology from a young age. In my free time, I have done several projects already to teach myself how it all works. I first started out as a university student, but it didn't quite fit with me and thus I ended up in college doing IT.
+                In my free time, I often play video games. I am also part of a chill scouting group where we love to hang out, chill and just have a fun time. I have also practiced scuba diving for multiple years, albeit I took a short break during my studies due to time constraints.
+            </p>
+        </div>
     </div>
   </div>
 </body>
