--- a/index.html
+++ b/index.html
@@ -6,34 +6,36 @@
 </head>
 <body>
   <h1 class="title">About Me</h1>
-  <div class="container">
-    <div class="imgage">
+  <article class="container">
+    <section class="image">
         <img src="img/me.jpg" alt="selfie" />
-    </div>
-    <div class="infobox">
-        <div class="box">
-            <h2>
-                I'm Sebastian. Welcome to my about me.
-            </h2>
-        </div>
-        <div class="box">
-            <p>
-                <b>name</b><br>
-                Sebastian Kuipers<br>
-                <b>age</b><br>
-                21<br>
-                <b>Origin</b><br>
-                Dutch<br>
-                <b>Residence</b><br>
-                Cruquius<br>
-            </p>
-        </div>
-        <div class="box">
-            <p>
-                I'm Sebastian Kuipers, born and raised in Haarlem. I've been very interested in computers and technology from a young age. In my free time, I have done several projects already to teach myself how it all works. I first started out as a university student, but it didn't quite fit with me and thus I ended up in college doing IT.
-                In my free time, I often play video games. I am also part of a chill scouting group where we love to hang out, chill and just have a fun time. I have also practiced scuba diving for multiple years, albeit I took a short break during my studies due to time constraints.
-            </p>
-        </div>
-    </div>
-  </div>
+    </section>
+    <section class="infobox">
+        <article>
+            <section class="box">
+                <h2>
+                    I'm Sebastian. Welcome to my about me.
+                </h2>
+            </section>
+            <section class="box">
+                <p>
+                    <b>name</b><br>
+                    Sebastian Kuipers<br>
+                    <b>age</b><br>
+                    21<br>
+                    <b>Origin</b><br>
+                    Dutch<br>
+                    <b>Residence</b><br>
+                    Cruquius<br>
+                </p>
+            </section>
+            <section class="box">
+                <p>
+                    I'm Sebastian Kuipers, born and raised in Haarlem. I've been very interested in computers and technology from a young age. In my free time, I have done several projects already to teach myself how it all works. I first started out as a university student, but it didn't quite fit with me and thus I ended up in college doing IT.
+                    In my free time, I often play video games. I am also part of a chill scouting group where we love to hang out, chill and just have a fun time. I have also practiced scuba diving for multiple years, albeit I took a short break during my studies due to time constraints.
+                </p>
+            </section>
+        </article>
+    </section>
+  </article>
 </body>
